# tap-cloudwatch

./: .pre-commit-config.yaml  README.md  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_cloudwatch/: __init__.py  client.py  cloudwatch_api.py  exception.py  streams.py  subquery.py  tap.py
tap_cloudwatch/tests/: test_cloudwatch_api.py  test_core.py  test_query.py
tests/: __init__.py  test_cloudwatch_api.py  test_core.py  utils.py
