[tool.poetry]
name = "tap-cloudwatch"
version = "0.3.0"
description = "`tap-cloudwatch` is a Singer tap for CloudWatch, built with the Meltano Singer SDK."
authors = ["Pat Nadolny"]
keywords = [
    "ELT",
    "CloudWatch",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.28.2"
singer-sdk = "^0"
fs-s3fs = { version = "^1.1.1", optional = true}
boto3 = "^1.28.9"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
tox = "^3.28.0"
flake8 = "^3.9.2"
pydocstyle = "^6.3.0"
mypy = "^0.910"
types-requests = "^2.28.11"
isort = "^5.11.5"
freezegun = "^1.2.2"
black = "^22.12.0"
coverage = "^7.2.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_cloudwatch"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-cloudwatch = 'tap_cloudwatch.tap:TapCloudWatch.cli'
