[tool.poetry]
name = "tap-cloudwatch"
version = "0.3.0"
description = "`tap-cloudwatch` is a Singer tap for CloudWatch, built with the Meltano Singer SDK."
authors = ["Pat Nadolny"]
keywords = [
    "ELT",
    "CloudWatch",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "~=1.35.97"
singer-sdk = "~=0.39.0"
pytz = "==2024.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
freezegun = "^1.2.2"
mypy = ">=1"
pytest = ">=8"
ruff = ">=0.5.7"
types-pytz = "^2024.1.0.20240417"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "FA",  # flake8-future-annotations
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-cloudwatch = 'tap_cloudwatch.tap:TapCloudWatch.cli'
